fix: overflow

--- a/src/app/chess/ChessBoard.module.css
+++ b/src/app/chess/ChessBoard.module.css
@@ -1,6 +1,8 @@
 .board {
   position: relative;
   background-size: 100%;
+}
+
+.boardImage {
   border-radius: 5px;
-  overflow: hidden;
 }
